--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">InMuvi</string>
+    <string name="Movie">Movie</string>
+    <string name="Tv">TV</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="head_title_movie">Movie For You</string>
+    <string name="head_title_tv">TV Show For You</string>
 </resources>
