--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="Tv">TV</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="head_title_movie">Movie For You</string>
     <string name="head_title_tv">TV Show For You</string>
+    <string name="share">share</string>
+    <string name="title_overview">Overview</string>
 </resources>
